<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/SelectedPlan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/PlansList"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:gravity="center">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddNewPlan"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAddNewPlanClick"
            android:text="@string/add_buttons" />

        <Button
            android:id="@+id/btnDeleteNewPlan"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDeleteNewPlanClick"
            android:text="@string/delete_buttons" />

    </LinearLayout>

</LinearLayout>